--- a/package.json
+++ b/package.json
@@ -2,17 +2,30 @@
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "^0.2.0-canary.0",
+    "beeptools": "^2.1.0",
     "discord-api-types": "^0.26.0",
     "discord.js": "^13.5.0",
     "dotenv": "^10.0.0"
   },
   "name": "sa-bot",
   "version": "1.0.0",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node ."
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shock59/sa-bot.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/shock59/sa-bot/issues"
+  },
+  "homepage": "https://github.com/shock59/sa-bot#readme",
+  "description": "",
+  "devDependencies": {
+    "node": "^16.13.1"
+  }
 }
