--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "@discordjs/rest": "^0.2.0-canary.0",
     "discord-api-types": "^0.26.0",
     "discord.js": "^13.5.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "fuse.js": "^6.5.3",
+    "node-fetch": "^3.1.0"
   },
   "name": "@redguy12/scratchaddons",
   "version": "1.0.0",
