--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "^0.2.0-canary.0",
+    "beeptools": "^2.1.0",
     "discord-api-types": "^0.26.0",
     "discord.js": "^13.5.0",
-    "dotenv": "^10.0.0",
-    "fuse.js": "^6.5.3",
-    "node-fetch": "^3.1.0"
+    "dotenv": "^10.0.0"
   },
-  "name": "@redguy12/scratchaddons",
+  "name": "sa-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -26,10 +25,7 @@
   },
   "homepage": "https://github.com/shock59/sa-bot#readme",
   "description": "",
-  "private": true,
-  "type": "module",
   "devDependencies": {
-    "@types/node": "^17.0.5",
-    "typescript": "^4.5.4"
+    "node": "^16.13.1"
   }
 }
