--- a/jsconfig.json
+++ b/jsconfig.json
@@ -57,9 +57,6 @@
 		"watch": true
 	},
 	"exclude": ["node_modules", ".git", "dist"],
-	"include": [
-		"./**/*",
-		"./.**/*"
-	],
+	"include": ["./**/*", "./.**/*"],
 	"typeAcquisition": { "enable": true }
 }
