Couple minor changes. Trying to get a /answer command working.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+	"name": "sabot",
+	"version": "0.0.0",
+	"license": "MIT",
+	"description": "",
+	"type": "module",
+	"scripts": {
+		"start": "nodemon src --harmony --trace-warnings"
+	},
 	"dependencies": {
 		"@discordjs/builders": "^0.11.0",
 		"@discordjs/rest": "^0.2.0-canary.0",
@@ -6,33 +14,13 @@
 		"discord.js": "^13.5.0",
 		"dotenv": "^10.0.0",
 		"fuse.js": "^6.5.3",
-		"node-fetch": "^3.1.0"
+		"node-fetch": "^3.1.0",
+		"nodemon": "^2.0.15"
 	},
-	"name": "@redguy12/scratchaddons",
-	"version": "1.0.0",
-	"main": "index.js",
-	"scripts": {
-		"start": "node ."
-	},
-	"author": "",
-	"license": "ISC",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/shock59/sa-bot.git"
-	},
-	"keywords": [],
-	"bugs": {
-		"url": "https://github.com/shock59/sa-bot/issues"
-	},
-	"homepage": "https://github.com/shock59/sa-bot#readme",
-	"description": "",
-	"private": true,
-	"type": "module",
 	"devDependencies": {
 		"@types/node": "^17.0.5",
 		"prettier": "^2.5.1",
 		"prettier-plugin-ini": "^0.3.1",
-		"prettier-plugin-jsdoc": "^0.3.30",
-		"typescript": "^4.5.4"
+		"prettier-plugin-jsdoc": "^0.3.30"
 	}
 }
