--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node . --harmony --trace-warnings",
-		"dev": "nodemon . --harmony --trace-warnings"
+		"dev": "nodemon . --harmony --trace-warnings",
+		"format": "prettier -w \"**\" --ignore-unknown"
 	},
 	"dependencies": {
 		"@discordjs/builders": "^0.11.0",
