--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sa-bot",
+	"name": "scradd",
 	"version": "0.0.0",
 	"license": "MIT",
 	"description": "",
@@ -20,21 +20,24 @@
 		"node-fetch": "^3.2.0"
 	},
 	"devDependencies": {
+		"@redguy12/prettier-config": "^1.0.0",
+		"@rushstack/eslint-patch": "^1.1.0",
+		"@types/eslint": "^8.2.2",
 		"@types/node": "^17.0.12",
+		"eslint": "^8.5.0",
 		"nodemon": "^2.0.15",
 		"openode": "^2.1.6",
 		"prettier": "^2.5.1",
-		"prettier-plugin-ini": "^0.3.1",
-		"prettier-plugin-jsdoc": "^0.3.30",
 		"typescript": "^4.5.5"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/shock59/sa-bot.git"
+		"url": "git+https://github.com/scratchaddons-community/scradd.git"
 	},
 	"bugs": {
-		"url": "https://github.com/shock59/sa-bot/issues"
+		"url": "https://github.com/scratchaddons-community/scradd/issues"
 	},
-	"homepage": "https://github.com/shock59/sa-bot#readme",
-	"private": true
+	"homepage": "https://discord.gg/Cs25kzs889",
+	"private": true,
+	"prettier": "@redguy12/prettier-config"
 }
