updates - fix typos   user-facing:   - `Confimation` -> `Confirmation` in modmail   - `Sucessfully` -> `Successfully` in editing reports and suggestions   - `permision` -> `permission` in edting reports and suggestions   - `Uhoh` -> `Uh-oh` in error messages - Fix server suggestions detection - remove unused variables - tweak autoreactions - 1 new one :eyes: - remove console.log - format code - Fix openode publishing a file that doesn't need to be - only show title ratelimit message if title has been changed - remove unused vars - sort package.json
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ node_modules/
 # Optional REPL history
 .node_repl_history
 
-# dotenv environment variables file
+# env environment variables file
 .env
 .env.test
 
