--- a/package.json
+++ b/package.json
@@ -20,22 +20,22 @@
 		"start": "node . --harmony --trace-warnings"
 	},
 	"dependencies": {
-		"@discordjs/builders": "^0.12.0",
-		"@discordjs/rest": "^0.3.0",
-		"discord-api-types": "^0.26.1",
-		"discord.js": "^13.6.0",
-		"dotenv": "^16.0.0",
-		"fuse.js": "^6.5.3",
-		"node-fetch": "^2.6.7"
+		"@discordjs/builders": "0.12.0",
+		"@discordjs/rest": "0.3.0",
+		"discord-api-types": "0.26.1",
+		"discord.js": "13.6.0",
+		"dotenv": "16.0.0",
+		"fuse.js": "6.5.3",
+		"node-fetch": "2.6.7"
 	},
 	"devDependencies": {
-		"@redguy12/prettier-config": "^1.1.1",
-		"@types/node": "^17.0.18",
-		"nodemon": "^2.0.15",
-		"openode": "^2.1.6",
-		"prettier": "^2.5.1",
-		"prettier-package-json": "^2.6.0",
-		"typescript": "^4.5.5"
+		"@redguy12/prettier-config": "1.1.1",
+		"@types/node": "17.0.18",
+		"nodemon": "2.0.15",
+		"openode": "2.1.6",
+		"prettier": "2.5.1",
+		"prettier-package-json": "2.6.0",
+		"typescript": "4.5.5"
 	},
 	"prettier": "@redguy12/prettier-config",
 	"prettier-package-json": {
