--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": true,
 	"name": "scradd",
 	"version": "1.4.3",
-	"description": "",
+	"description": "Custom Discord bot for the Scratch Addons server.",
 	"license": "MIT",
 	"homepage": "https://discord.gg/Cs25kzs889",
 	"repository": {
