fix typo in issue template
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -60,5 +60,5 @@ body:
                     Guidelines](https://github.com/scratchaddons-community/scradd/blob/issues/.github/CONTRIBUTING.md).
                 required: true
 
-              - label: I am willing to submit a PR to fix this (optional).
+              - label: I am willing to submit a PR to add this (optional).
                 required: false
