--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "1.6.2",
 	"description": "Custom Discord bot for the Scratch Addons server.",
 	"license": "MIT",
-	"homepage": "https://discord.gg/Cs25kzs889",
+	"homepage": "https://scradd.openode.dev",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/scratchaddons-community/scradd.git"
@@ -21,8 +21,6 @@
 	},
 	"dependencies": {
 		"@discordjs/builders": "0.12.0",
-		"@discordjs/rest": "0.3.0",
-		"discord-api-types": "0.26.1",
 		"discord.js": "13.6.0",
 		"dotenv": "16.0.0",
 		"fuse.js": "6.5.3",
