bold stuff update wording fix broken url in /addond debug info to /info update /info to make it more see source code setThumbnail in /addon compact ad up to date fix the /info source code emoji excape close reason in modmail prettier on guildUnavailable throw a refrence error instead of error suggest using usernamesinstead of tag in mimic make mesageToText even more realistic don't hardcode url

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "1.9.0",
 	"description": "Custom Discord bot for the Scratch Addons server.",
 	"license": "MIT",
-	"homepage": "https://scradd.openode.dev",
+	"homepage": "https://discord.gg/Cs25kzs889",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/scratchaddons-community/scradd.git"
