--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
 		"discord.js": "13.6.0",
 		"dotenv": "16.0.0",
 		"fuse.js": "6.5.3",
-		"node-fetch": "3.2.3"
+		"node-fetch": "3.2.3",
+		"papaparse": "5.3.2"
 	},
 	"devDependencies": {
 		"@redguy12/prettier-config": "1.1.1",
 		"@types/node": "17.0.22",
+		"@types/papaparse": "5.3.2",
 		"nodemon": "2.0.15",
 		"openode": "2.1.6",
 		"prettier": "2.5.1",
