--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,16 +8,13 @@
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
-		"importHelpers": true,
 		"importsNotUsedAsValues": "error",
 		"isolatedModules": true,
-		"jsx": "preserve",
-		"lib": ["dom", "ES2015", "ES2016", "ES2017", "ES2018", "ES2019", "ES2020", "ES2021"],
+		"lib": ["dom", "ES2021"],
 		"maxNodeModuleJsDepth": 0,
 		"module": "esnext",
 		"moduleResolution": "node",
 		"noEmit": true,
-		"noEmitOnError": true,
 		"noErrorTruncation": true,
 		"noImplicitAny": true,
 		"noImplicitOverride": true,
@@ -25,11 +22,7 @@
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"outDir": "dist",
 		"pretty": true,
-		"removeComments": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
 		"strict": true,
 		"strictBindCallApply": true,
 		"strictFunctionTypes": true,
@@ -38,10 +31,9 @@
 		"stripInternal": true,
 		"target": "es2021",
 		"useDefineForClassFields": true,
-		"useUnknownInCatchVariables": true,
-		"watch": false
+		"useUnknownInCatchVariables": true
 	},
-	"exclude": ["node_modules", ".git", "dist"],
+	"exclude": ["node_modules", ".git"],
 	"include": ["./*", "./.*", "./**/*", "./.**/*"],
 	"typeAcquisition": { "enable": true }
 }
