lots of changes mostly to automod rename firstPromiseValued to firstTrueyPromise remove extra flags from npm start rewrite automod autocensor bad words on board remove cruft disable restarted msg on dev but say ver in console 1 new ban, join, and leave message fix e-p including some new messages twice some small logging work
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"scripts": {
 		"dev": "nodemon . --harmony --trace-warnings",
 		"format": "prettier --write \"**\" --ignore-unknown && prettier-package-json --write",
-		"start": "node . --harmony --trace-warnings",
+		"start": "node .",
 		"types": "tsc --project jsconfig.json"
 	},
 	"dependencies": {
