--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
 	},
 	"dependencies": {
 		"@discordjs/builders": "0.12.0",
+		"difflib": "0.2.4",
 		"discord.js": "13.6.0",
 		"dotenv": "16.0.1",
 		"fuse.js": "6.6.2",
+		"json-diff": "0.7.4",
 		"node-fetch": "3.2.4",
 		"papaparse": "5.3.2"
 	},
 	"devDependencies": {
 		"@redguy12/prettier-config": "1.1.1",
 		"@types/node": "17.0.33",
+		"@types/difflib": "0.2.0",
+		"@types/json-diff": "0.7.0",
 		"@types/papaparse": "5.3.2",
 		"nodemon": "2.0.16",
 		"openode": "2.1.6",
