--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,17 +15,10 @@ jobs:
               with:
                   ref: ${{ github.head_ref }}
 
-            - name: Setup Node.JS
-              uses: actions/setup-node@v3.1.1
-              with:
-                  node-version: 16
-                  cache: "npm"
-
-            - name: Install
-              run: npm ci --force
-
-            - name: Configure
-              run: npx openode ci-conf "${{ secrets.OPENODE }}" "scradd"
-
             - name: Deploy
-              run: npx openode deploy
+              uses: akhileshns/heroku-deploy@v3.12.12
+              with:
+                   heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+                   heroku_app_name: "scradd"
+                   heroku_email: "paul@reid-family.org"
+                   branch: ${{ github.head_ref }}
