--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
         runs-on: ubuntu-20.04
 
         steps:
+            - run: echo ${{ github.head_ref }}
             - name: Checkout
               uses: actions/checkout@v3.0.2
               with:
