--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"name": "scradd",
-	"version": "1.9.4",
+	"version": "2.0.0-prerelease",
 	"description": "Custom Discord bot for the Scratch Addons server.",
 	"license": "MIT",
 	"homepage": "https://discord.gg/Cs25kzs889",
@@ -19,6 +19,7 @@
 	},
 	"dependencies": {
 		"@discordjs/builders": "0.12.0",
+		"async-exit-hook": "2.0.1",
 		"difflib": "0.2.4",
 		"discord.js": "13.6.0",
 		"dotenv": "16.0.1",
@@ -29,6 +30,7 @@
 	},
 	"devDependencies": {
 		"@redguy12/prettier-config": "1.1.1",
+		"@types/async-exit-hook": "2.0.0",
 		"@types/json-diff": "0.7.0",
 		"@types/node": "18.0.4",
 		"@types/papaparse": "5.3.2",
