--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"name": "scradd",
-	"version": "1.9.4",
+	"version": "1.9.5",
 	"description": "Custom Discord bot for the Scratch Addons server.",
 	"license": "MIT",
 	"homepage": "https://discord.gg/Cs25kzs889",
@@ -9,31 +9,28 @@
 		"type": "git",
 		"url": "git+https://github.com/scratchaddons-community/scradd.git"
 	},
-	"bugs": {
-		"url": "https://github.com/scratchaddons-community/scradd/issues"
-	},
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
 		"dev": "nodemon . --harmony --trace-warnings",
 		"format": "prettier --write \"**\" --ignore-unknown && prettier-package-json --write",
-		"start": "node . --harmony --trace-warnings"
+		"start": "node .",
+		"types": "tsc --project jsconfig.json"
 	},
 	"dependencies": {
 		"@discordjs/builders": "0.12.0",
 		"discord.js": "13.6.0",
-		"dotenv": "16.0.0",
-		"fuse.js": "6.5.3",
-		"node-fetch": "3.2.3"
+		"dotenv": "16.0.1",
+		"fuse.js": "6.6.2",
+		"node-fetch": "3.2.9"
 	},
 	"devDependencies": {
 		"@redguy12/prettier-config": "1.1.1",
-		"@types/node": "17.0.22",
-		"nodemon": "2.0.15",
-		"openode": "2.1.6",
+		"@types/node": "18.6.1",
+		"nodemon": "2.0.19",
 		"prettier": "2.5.1",
-		"prettier-package-json": "2.6.3",
-		"typescript": "4.5.5"
+		"prettier-package-json": "2.6.0",
+		"typescript": "4.7.4"
 	},
 	"prettier": "@redguy12/prettier-config",
 	"prettier-package-json": {
