--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,3 +23,4 @@ jobs:
                   heroku_email: "paul@reid-family.org"
                   branch: ${{ github.head_ref }}
                   procfile: "worker: npm start"
+                  dontuseforce: 1
