--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"name": "scradd",
-	"version": "1.9.5",
+	"version": "1.9.6",
 	"description": "Custom Discord bot for the Scratch Addons server.",
 	"license": "MIT",
 	"homepage": "https://discord.gg/Cs25kzs889",
@@ -12,7 +12,7 @@
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon . --harmony --trace-warnings",
+		"dev": "nodemon .",
 		"format": "prettier --write \"**\" --ignore-unknown && prettier-package-json --write",
 		"start": "node .",
 		"types": "tsc --project jsconfig.json"
