--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "nodemon . --harmony --trace-warnings",
-		"format": "prettier --write \"**\" --ignore-unknown && prettier-package-json --write",
+		"format": "prettier --write \"**\" --ignore-unknown",
 		"start": "node .",
 		"types": "tsc --project jsconfig.json"
 	},
@@ -25,24 +25,18 @@
 		"dotenv": "16.0.1",
 		"fuse.js": "6.6.2",
 		"json-diff": "0.9.0",
-		"node-fetch": "3.2.9",
+		"node-fetch": "3.2.10",
 		"papaparse": "5.3.2"
 	},
 	"devDependencies": {
-		"@redguy12/prettier-config": "1.1.1",
+		"@redguy12/prettier-config": "1.2.0",
 		"@types/async-exit-hook": "2.0.0",
 		"@types/json-diff": "0.7.0",
-		"@types/node": "18.6.2",
-		"@types/papaparse": "5.3.2",
+		"@types/node": "18.6.4",
+		"@types/papaparse": "5.3.3",
 		"nodemon": "2.0.19",
-		"prettier": "2.5.1",
-		"prettier-package-json": "2.6.0",
+		"prettier": "2.7.1",
 		"typescript": "4.7.4"
 	},
-	"prettier": "@redguy12/prettier-config",
-	"prettier-package-json": {
-		"tabWidth": 4,
-		"useTabs": true,
-		"expandUsers": true
-	}
+	"prettier": "@redguy12/prettier-config"
 }
