--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon . --harmony --trace-warnings",
+		"dev": "nodemon .",
 		"format": "prettier --write \"**\" --ignore-unknown",
 		"start": "node .",
 		"types": "tsc --project jsconfig.json"
@@ -38,5 +38,9 @@
 		"nodemon": "2.0.19",
 		"prettier": "2.7.1",
 		"typescript": "4.7.4"
+	},
+	"engines": {
+		"node": "16.13.0",
+		"npm": "8.13.2"
 	}
 }
