the easy stuff plus: - max of 100 chars on feedback titles - min of 30 chars on feedback descriptions - use time formatter - setMaxLength 22 on purge because that's how long a ping is - don't manually construct urls - remove dead code aaaa some much left to do ts should help
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,7 +11,7 @@
 		"importsNotUsedAsValues": "error",
 		"lib": ["dom", "ES2021"],
 		"maxNodeModuleJsDepth": 0,
-		"module": "esnext",
+		"module": "node16",
 		"moduleResolution": "node",
 		"noEmit": true,
 		"noErrorTruncation": true,
