--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,7 +11,7 @@
 		"importsNotUsedAsValues": "error",
 		"lib": ["dom", "ES2021"],
 		"maxNodeModuleJsDepth": 0,
-		"module": "node16",
+		"module": "ES2022",
 		"moduleResolution": "node",
 		"noEmit": true,
 		"noErrorTruncation": true,
