--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@types/json-diff": "0.7.0",
 		"@types/node": "18.6.4",
 		"@types/papaparse": "5.3.3",
+		"@types/chrome": "^0.0.180",
 		"nodemon": "2.0.19",
 		"prettier": "2.7.1",
 		"typescript": "4.7.4"
