JSDoc and JSConfig
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,9 +10,8 @@
 		"forceConsistentCasingInFileNames": true,
 		"importsNotUsedAsValues": "error",
 		"lib": ["dom", "ES2021"],
-		"maxNodeModuleJsDepth": 0,
 		"module": "ES2022",
-		"moduleResolution": "node",
+		"moduleResolution": "Node",
 		"noEmit": true,
 		"noErrorTruncation": true,
 		"noImplicitAny": true,
@@ -21,14 +20,9 @@
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"pretty": true,
 		"strict": true,
-		"strictBindCallApply": true,
-		"strictFunctionTypes": true,
-		"strictNullChecks": true,
-		"strictPropertyInitialization": true,
 		"stripInternal": true,
-		"target": "es2021",
+		"target": "ES2021",
 		"useDefineForClassFields": true,
 		"useUnknownInCatchVariables": true
 	},
