--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,6 +10,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"importsNotUsedAsValues": "error",
 		"lib": ["dom", "ES2021"],
+		"maxNodeModuleJsDepth": 0,
 		"module": "ES2022",
 		"moduleResolution": "Node",
 		"noEmit": true,
