--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,8 +11,8 @@
 		"importsNotUsedAsValues": "error",
 		"lib": ["dom", "ES2021"],
 		"maxNodeModuleJsDepth": 0,
-		"module": "esnext",
-		"moduleResolution": "node",
+		"module": "ES2022",
+		"moduleResolution": "Node",
 		"noEmit": true,
 		"noErrorTruncation": true,
 		"noImplicitAny": true,
@@ -21,14 +21,9 @@
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"pretty": true,
 		"strict": true,
-		"strictBindCallApply": true,
-		"strictFunctionTypes": true,
-		"strictNullChecks": true,
-		"strictPropertyInitialization": true,
 		"stripInternal": true,
-		"target": "es2021",
+		"target": "ES2021",
 		"useDefineForClassFields": true,
 		"useUnknownInCatchVariables": true
 	},
