--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
 	"devDependencies": {
 		"@redguy12/prettier-config": "2.0.0",
 		"@types/async-exit-hook": "2.0.0",
-		"@types/chrome": "^0.0.180",
+		"@types/chrome": "0.0.193",
 		"@types/json-diff": "0.7.0",
-		"@types/node": "18.7.2",
+		"@types/node": "18.7.3",
 		"@types/papaparse": "5.3.3",
 		"nodemon": "2.0.19",
 		"prettier": "2.7.1",
