--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"devDependencies": {
 		"@redguy12/prettier-config": "2.0.0",
 		"@types/async-exit-hook": "2.0.0",
+		"@types/chrome": "0.0.193",
 		"@types/json-diff": "0.7.0",
 		"@types/node": "18.7.4",
 		"@types/papaparse": "5.3.3",
