--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
 	},
 	"devDependencies": {
 		"@redguy12/prettier-config": "2.0.0",
-		"@types/async-exit-hook": "2.0.0",
+		"@types/async-exit-hook": "<=2.0.1",
 		"@types/chrome": "0.0.193",
-		"@types/json-diff": "0.7.0",
-		"@types/node": "18.7.5",
-		"@types/papaparse": "5.3.3",
+		"@types/json-diff": "<=0.9.0",
+		"@types/node": "<=16.13.0",
+		"@types/papaparse": "<=5.3.2",
 		"nodemon": "2.0.19",
 		"prettier": "2.7.1",
 		"typescript": "4.7.4"
