Consistent grammar and types
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -72,5 +72,5 @@ body:
                     Guidelines](https://github.com/scratchaddons-community/scradd/blob/main/.github/CONTRIBUTING.md).
                 required: true
 
-              - label: I am willing to submit a PR to fix this (optional).
+              - label: I'm willing to submit a PR to fix this (optional).
                 required: false
