--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
 	},
 	"license": "MIT",
 	"type": "module",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"scripts": {
-		"dev": "nodemon .",
+		"serve": "nodemon . --watch dist",
 		"format": "prettier --write \"**\" --ignore-unknown",
 		"start": "node .",
-		"types": "tsc --project jsconfig.json"
+		"dev": "tsc --project tsconfig.json"
 	},
 	"prettier": "@redguy12/prettier-config",
 	"dependencies": {
