--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"homepage": "https://discord.gg/FPv957V6SD",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/scratchaddons-community/scradd.git"
+		"url": "https://github.com/scratchaddons-community/scradd"
 	},
 	"license": "MIT",
 	"type": "module",
@@ -36,14 +36,14 @@
 		"@types/async-exit-hook": "<=2.0.1",
 		"@types/chrome": "0.0.196",
 		"@types/json-diff": "<=0.9.0",
-		"@types/node": "<=16.13.0",
+		"@types/node": "<=16.17.0",
 		"@types/papaparse": "<=5.3.2",
 		"nodemon": "2.0.19",
 		"prettier": "2.7.1",
 		"typescript": "4.8.2"
 	},
 	"engines": {
-		"node": "16.13.0",
+		"node": "16.17.0",
 		"npm": "8.13.2"
 	}
 }
