--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,13 +18,19 @@ jobs:
             - name: Setup Node.JS
               uses: actions/setup-node@v3.4.1
               with:
-                  node-version: "16.13.0"
+                  node-version: "16.17.0"
                   cache: "npm"
 
             - name: Install
               run: npm ci --force
 
+            - name: Clean DB listeners
+              run: curl https://sa-discord.up.railway.app/cleanDatabaseListeners
+
             - name: Deploy
               run: npx railway up --detach
               env:
                   RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
+            - name: Clean DB listeners
+              run: curl https://sa-discord.up.railway.app/cleanDatabaseListeners
