--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,6 @@ jobs:
                   RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
             - name: Clean DB listeners
-              run: curl https://sa-discord.up.railway.app/cleanDatabaseListeners
+              run:
+                  curl https://sa-discord.up.railway.app/cleanDatabaseListeners?auth=${{
+                  secrets.CDBL_AUTH }}
