--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"scripts": {
 		"build": "tsc --project tsconfig.json",
 		"dev": "tsc --project tsconfig.json --watch",
-		"format": "prettier --write \"**\" --ignore-unknown",
+		"format": "prettier --write \"**\" \"!dist/**\" --ignore-unknown",
 		"serve": "nodemon . --watch dist",
 		"start": "node ."
 	},
