--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"build": "tsc --project tsconfig.json",
 		"dev": "tsc --project tsconfig.json --watch",
 		"format": "prettier --write \"**\" \"!dist/**\" --ignore-unknown",
+		"prepare": "cp pre-commit .git/hooks/ && chmod ug+x .git/hooks/",
 		"serve": "nodemon . --watch dist",
 		"start": "node ."
 	},
