change stuff that broke with .4 and use new features waiting on https://github.com/discordjs/discord.js/pull/8662 and a builders release before merge
This reverts commit ed1a413d4d2a3986d1f7bca9e00d122bac029a69.

Signed-off-by: RedGuy12 <61329810+RedGuy12@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 		"maxNodeModuleJsDepth": 0,
 		"module": "ESNext",
 		"moduleResolution": "Node",
-		"noEmitOnError": true,
+		"noEmitOnError": false,
 		"noErrorTruncation": true,
 		"noImplicitAny": true,
 		"noImplicitOverride": true,
