--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "scradd",
-	"version": "2.0.3",
+	"version": "2.0.4-pre",
 	"private": true,
 	"description": "Custom Discord bot for the Scratch Addons server.",
 	"homepage": "https://discord.gg/FPv957V6SD",
