--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "scradd",
-	"version": "2.0.4-pre",
+	"version": "2.0.4",
 	"private": true,
 	"description": "Custom Discord bot for the Scratch Addons server.",
 	"homepage": "https://discord.gg/FPv957V6SD",
@@ -23,7 +23,7 @@
 	"dependencies": {
 		"async-exit-hook": "2.0.1",
 		"difflib": "0.2.4",
-		"discord.js": "^14.5.0",
+		"discord.js": "14.5.0",
 		"dotenv": "16.0.2",
 		"fuse.js": "6.6.2",
 		"json-diff": "0.9.0",
