--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "scradd",
-	"version": "2.0.4",
+	"version": "2.0.5",
 	"private": true,
 	"description": "Custom Discord bot for the Scratch Addons server.",
 	"homepage": "https://discord.gg/FPv957V6SD",
@@ -15,7 +15,7 @@
 		"build": "tsc --project tsconfig.json",
 		"dev": "tsc --project tsconfig.json --watch",
 		"format": "prettier --write \"**\" \"!dist/**\" --ignore-unknown",
-		"prepare": "cp pre-commit .git/hooks/ && chmod ug+x .git/hooks/",
+		"prepare": "[ -d .git/hooks/ ] && cp pre-commit .git/hooks/ && chmod ug+x .git/hooks/",
 		"serve": "nodemon . --watch dist",
 		"start": "node ."
 	},
