--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 	},
 	"prettier": "@redguy12/prettier-config",
 	"dependencies": {
+		"@discordjs/opus": "0.8.0",
+		"@discordjs/voice": "0.11.0",
 		"async-exit-hook": "2.0.1",
 		"difflib": "0.2.4",
 		"discord.js": "14.5.0",
@@ -28,7 +30,8 @@
 		"json-diff": "0.9.0",
 		"node-fetch": "3.2.10",
 		"papaparse": "5.3.2",
-		"serialize-error": "11.0.0"
+		"serialize-error": "11.0.0",
+		"sodium": "3.0.2"
 	},
 	"devDependencies": {
 		"@railway/cli": "2.0.12",
