--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "scradd",
-	"version": "2.1.0",
+	"version": "2.1.1",
 	"private": true,
 	"description": "Custom Discord bot for the Scratch Addons server.",
 	"homepage": "https://discord.gg/FPv957V6SD",
@@ -28,10 +28,10 @@
 		"dotenv": "16.0.3",
 		"fuse.js": "6.6.2",
 		"json-diff": "0.9.0",
+		"libsodium-wrappers": "0.7.10",
 		"node-fetch": "3.2.10",
 		"papaparse": "5.3.2",
-		"serialize-error": "11.0.0",
-		"sodium": "3.0.2"
+		"serialize-error": "11.0.0"
 	},
 	"devDependencies": {
 		"@railway/cli": "2.0.13",
