--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "scradd",
-	"version": "2.1.1",
+	"version": "2.1.2",
 	"private": true,
 	"description": "Custom Discord bot for the Scratch Addons server.",
 	"homepage": "https://discord.gg/FPv957V6SD",
@@ -26,6 +26,7 @@
 		"difflib": "0.2.4",
 		"discord.js": "14.5.0",
 		"dotenv": "16.0.3",
+		"ffmpeg-static": "5.1.0",
 		"fuse.js": "6.6.2",
 		"json-diff": "0.9.0",
 		"libsodium-wrappers": "0.7.10",
