hmm - don't show low-rated addons in /addon - clarify /e-p desc - fix /e-p m-r - faster boot times - fix /info config not showing undefined roles - remove /voice activity, rename /voice to /sound - fix mod-talk not being ignored - add active role - remove unused code - better errors - stop console spam - disable skipLibCheck
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
 		"useUnknownInCatchVariables": true,
 		"importHelpers": true,
 		"outDir": "dist",
-		"skipLibCheck": true,
+		"skipLibCheck": false,
 		"resolveJsonModule": true
 	},
 	"exclude": ["node_modules", ".git", "dist"],
