easier command declaration
Signed-off-by: RedGuy12 <61329810+RedGuy12@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
 	"compilerOptions": {
 		"allowJs": true,
-		"allowSyntheticDefaultImports": true,
 		"alwaysStrict": true,
 		"baseUrl": ".",
 		"checkJs": true,
@@ -29,7 +28,8 @@
 		"importHelpers": true,
 		"outDir": "dist",
 		"skipLibCheck": false,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"exactOptionalPropertyTypes": false
 	},
 	"exclude": ["node_modules", ".git", "dist"],
 	"include": ["./*", "./.*", "./**/*", "./.**/*"],
