--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,8 +2,29 @@ name: Lint
 on: [push, pull_request_target, workflow_dispatch]
 
 jobs:
-    setup:
-        name: Setup
+    bump:
+        name: Bump dependencies
+        runs-on: ubuntu-20.04
+
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3.1.0
+              with:
+                  ref: ${{ github.head_ref }}
+
+            - name: Bump dependnencies
+              uses: RedGuy12/sync-types@v1.0.2
+
+            - name: Commit
+              uses: stefanzweifel/git-auto-commit-action@v4.15.4
+              with:
+                  commit_message: Bump dependencies
+                  branch: ${{ github.head_ref }}
+
+    format:
+        name: Format
+        needs: [bump]
+        if: ${{ always() }}
         runs-on: ubuntu-20.04
 
         steps:
@@ -18,30 +39,9 @@ jobs:
                   node-version: "18.12.1"
                   cache: "npm"
 
-    bump:
-        name: Bump dependencies
-        needs: [setup]
-        runs-on: ubuntu-20.04
-
-        steps:
-            - name: Bump dependnencies
-              uses: RedGuy12/sync-types@v1.0.2
-
             - name: Install
               run: npm ci
 
-            - name: Commit
-              uses: stefanzweifel/git-auto-commit-action@v4.15.4
-              with:
-                  commit_message: Bump dependencies
-                  branch: ${{ github.head_ref }}
-
-    format:
-        name: Format
-        needs: [bump]
-        runs-on: ubuntu-20.04
-
-        steps:
             - name: Format
               run: npm run format
 
@@ -54,8 +54,23 @@ jobs:
     build:
         name: Build
         needs: [bump]
+        if: ${{ always() }}
         runs-on: ubuntu-20.04
 
         steps:
+            - name: Checkout
+              uses: actions/checkout@v3.1.0
+              with:
+                  ref: ${{ github.head_ref }}
+
+            - name: Setup Node.JS
+              uses: actions/setup-node@v3.5.1
+              with:
+                  node-version: "18.12.1"
+                  cache: "npm"
+
+            - name: Install
+              run: npm ci
+
             - name: Build
               run: npm build
