--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,5 @@ updates:
       schedule:
           interval: "daily"
           time: "13:00"
+      ignore:
+        - dependency-name: "@types/*"
