--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"build": "tsc --project tsconfig.json",
 		"dev": "tsc --project tsconfig.json --watch",
 		"format": "prettier --write \"**\" \"!dist/**\" --ignore-unknown",
+		"lint": "cd node_modules/@redguy12/eslint-config/ && npx eslint ../../../ --resolve-plugins-relative-to . --fix",
 		"serve": "nodemon . --watch dist",
 		"start": "node ."
 	},
@@ -22,8 +23,8 @@
 	"dependencies": {
 		"@discordjs/opus": "0.9.0",
 		"@discordjs/voice": "0.14.0",
-		"async-exit-hook": "2.0.1",
 		"@napi-rs/canvas": "0.1.30",
+		"async-exit-hook": "2.0.1",
 		"difflib": "0.2.4",
 		"discord.js": "14.7.1",
 		"dotenv": "16.0.3",
@@ -36,12 +37,15 @@
 	},
 	"devDependencies": {
 		"@railway/cli": "2.0.13",
+		"@redguy12/eslint-config": "file:../../configs/eslint-config",
 		"@redguy12/prettier-config": "2.0.2",
 		"@types/async-exit-hook": "<=2.0.1",
 		"@types/chrome": "latest",
+		"@types/eslint": "8.4.10",
 		"@types/json-diff": "<=0.9.1",
 		"@types/node": "<=18.12.1",
 		"@types/papaparse": "<=5.3.2",
+		"eslint": "8.30.0",
 		"nodemon": "2.0.20",
 		"prettier": "2.8.0",
 		"typescript": "4.9.4"
