--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,6 @@
 		"useUnknownInCatchVariables": true
 	},
 	"exclude": ["node_modules", ".git", "dist"],
-	"include": ["./*", "./.*", "./**/*", "./.**/*"],
+	"include": ["./*", "./.*", "./**/*", "./.**/*"], // TODO: idt we need this
 	"typeAcquisition": { "enable": true }
 }
