start abstracting the server away
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
 		"stripInternal": true,
 		"target": "ES2021",
 		"useDefineForClassFields": true,
-		"useUnknownInCatchVariables": true
+		"useUnknownInCatchVariables": false
 	},
 	"exclude": ["node_modules", ".git", "dist"],
 	"include": ["./*", "./.*", "./**/*", "./.**/*"], // TODO: idt we need this
