--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
 		"fuse.js": "6.6.2",
 		"json-diff": "0.9.1",
 		"libsodium-wrappers": "0.7.10",
+		"mime-types": "2.1.35",
 		"papaparse": "5.3.2",
 		"serialize-error": "11.0.0"
 	},
 	"devDependencies": {
 		"@railway/cli": "2.1.0",
-		"@redguy12/eslint-config": "file:../../configs/eslint-config",
 		"@redguy12/prettier-config": "2.0.2",
 		"@types/async-exit-hook": "<=2.0.1",
 		"@types/chrome": "latest",
 		"@types/eslint": "<=8.30.0",
 		"@types/json-diff": "<=0.9.1",
+		"@types/mime-types": "2.1.1",
 		"@types/node": "<=18.12.1",
 		"@types/papaparse": "<=5.3.2",
 		"eslint": "8.30.0",
