--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,7 @@ name: Lint
 on:
     push:
         branches-ignore:
-            - 'dependabot/**'
+            - "dependabot/**"
     workflow_dispatch:
     schedule:
         - cron: "30 12 * * *" # 30 minutes before Dependabot
