--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,6 @@
 name: Lint
 on:
     push:
-        branches-ignore:
-            - "dependabot/**"
     workflow_dispatch:
     schedule:
         - cron: "30 12 * * *" # 30 minutes before Dependabot
@@ -16,6 +14,7 @@ jobs:
 
         steps:
             - name: Checkout
+              if: startsWith(github.ref_name, 'dependabot/') != true
               uses: actions/checkout@v3.3.0
               with:
                   ref: ${{ github.head_ref }}
@@ -32,7 +31,7 @@ jobs:
     format:
         name: Format
         needs: [bump]
-        if: ${{ always() }}
+        if: startsWith(github.ref_name, "dependabot/") != true && always()
         runs-on: ubuntu-20.04
 
         steps:
@@ -62,7 +61,7 @@ jobs:
     build:
         name: Build
         needs: [bump]
-        if: ${{ always() }}
+        if: startsWith(github.ref_name, "dependabot/") != true && always()
         runs-on: ubuntu-20.04
 
         steps:
