damn you railway
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,8 @@ jobs:
 
             - name: Link
               run: npx railway link b8b10332-30c2-4b72-8999-78c69ddcd63a
+              env:
+                  RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
             - name: Deploy
               run: npx railway up --detach
