move @railway/cli to optional
https://discord.com/channels/713503345364697088/1084328860465758270/1084328860465758270
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
 		"serialize-error": "11.0.0"
 	},
 	"devDependencies": {
-		"@railway/cli": "3.0.12",
 		"@redguy12/prettier-config": "2.0.2",
 		"@types/async-exit-hook": "<=2.0.1",
 		"@types/chrome": "latest",
@@ -41,11 +40,11 @@
 		"prettier": "2.8.0",
 		"typescript": "4.9.5"
 	},
+	"optionalDependencies": {
+		"@railway/cli": "3.0.12"
+	},
 	"engines": {
 		"node": "18.12.1",
 		"npm": "8.13.2"
-	},
-	"overrides": {
-		"discord-api-types": "0.37.34"
 	}
 }
