big update and 1 commit
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,12 @@ jobs:
                   node-version: "18.12.1"
                   cache: "npm"
 
+            - name: Download bad words
+              run: curl ${{ secrets.BAD_WORDS }} --output badWords.ts
+
+            - name: Download secrets
+              run: curl ${{ secrets.SECRETS }} --output secrets.ts
+
             - name: Install
               run: npm ci --force
 
