--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
 		"noImplicitOverride": true,
 		"noImplicitThis": true,
 		"noUncheckedIndexedAccess": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
 		"outDir": "dist",
 		"resolveJsonModule": true,
 		"skipLibCheck": false,
@@ -31,6 +31,6 @@
 		"useDefineForClassFields": true,
 		"useUnknownInCatchVariables": false
 	},
-	"exclude": ["node_modules", ".git", "dist"],
+	"exclude": ["node_modules", ".git", "dist", "modlogsOLD"],
 	"typeAcquisition": { "enable": true }
 }
