--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
 		"@types/papaparse": "<=5.3.2",
 		"nodemon": "2.0.21",
 		"prettier": "2.8.0",
-		"typescript": "4.9.5"
-	},
-	"optionalDependencies": {
+		"typescript": "4.9.5",
 		"@railway/cli": "3.0.12"
 	},
 	"engines": {
