--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@discordjs/voice": "0.16.0",
 		"@napi-rs/canvas": "0.1.40",
 		"async-exit-hook": "2.0.1",
-		"difflib": "0.2.4",
+		"difflib": "npm:@ewoudenberg/difflib@0.1.0",
 		"discord.js": "14.9.0",
 		"dotenv": "16.0.3",
 		"ffmpeg-static": "5.1.0",
@@ -34,7 +34,8 @@
 		"@types/chrome": "latest",
 		"@types/json-diff": "<=1.0.5",
 		"@types/mime-types": "<=2.1.35",
-		"@types/node": "<=18.12.1",
+		"@types/node": "<=18.12.1",		
+		"@types/difflib": "0.2.0",
 		"@types/papaparse": "<=5.3.2",
 		"nodemon": "2.0.21",
 		"prettier": "2.8.0",
