--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
 		"serialize-error": "11.0.0"
 	},
 	"devDependencies": {
+		"@railway/cli": "3.0.12",
 		"@redguy12/prettier-config": "2.0.2",
 		"@types/async-exit-hook": "<=2.0.1",
 		"@types/chrome": "latest",
+		"@types/difflib": "0.2.0",
 		"@types/json-diff": "<=1.0.5",
 		"@types/mime-types": "<=2.1.35",
 		"@types/node": "<=18.12.1",
-		"@types/difflib": "0.2.0",
 		"@types/papaparse": "<=5.3.2",
 		"nodemon": "2.0.22",
 		"prettier": "2.8.0",
-		"typescript": "4.9.5",
-		"@railway/cli": "3.0.12"
+		"typescript": "4.9.5"
 	},
 	"engines": {
 		"node": "18.12.1",
