--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
 		"noImplicitOverride": true,
 		"noImplicitThis": true,
 		"noUncheckedIndexedAccess": true,
-		"noUnusedLocals": false,
-		"noUnusedParameters": false,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
 		"outDir": "dist",
 		"resolveJsonModule": true,
 		"skipLibCheck": false,
