aieeee almost doneee
Signed-off-by: RedGuy12 <paul@reid-family.org>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
 		"stripInternal": true,
 		"target": "ES2021",
 		"useDefineForClassFields": true,
-		"useUnknownInCatchVariables": false
+		"useUnknownInCatchVariables": false,
+		"watch": false
 	},
 	"exclude": ["node_modules", ".git", "dist", "modlogsOLD"],
 	"typeAcquisition": { "enable": true }
