--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,13 @@
 		"checkJs": true,
 		"esModuleInterop": true,
 		"exactOptionalPropertyTypes": false,
-		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
 		"importHelpers": true,
-		"importsNotUsedAsValues": "error",
+		"verbatimModuleSyntax": true,
 		"lib": ["ESNext", "DOM"],
 		"maxNodeModuleJsDepth": 0,
 		"module": "ESNext",
-		"moduleResolution": "Node",
+		"moduleResolution": "Node16",
 		"noEmitOnError": true,
 		"noErrorTruncation": true,
 		"noImplicitAny": true,
