--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"difflib": "npm:@ewoudenberg/difflib@0.1.0",
 		"discord.js": "14.9.0",
 		"dotenv": "16.0.3",
-		"fuse.js": "6.6.2",
+		"fast-fuzzy": "1.12.0",
 		"json-diff": "1.0.6",
 		"mime-types": "2.1.35",
 		"papaparse": "5.3.2",
